Did some checkstyle in Pane1